# LearningBasics

./: README.txt
AlgorithmicProblems/CompetitiveProgramming/: CMakeLists.txt
AlgorithmicProblems/CompetitiveProgramming/Chapter1/Exercises/: 1.3.1.cpp  2  main
AlgorithmicProblems/CompetitiveProgramming/Chapter1/Exercises/1.2/: 1.2.3.2.cpp  1.2.3.3.cpp
AlgorithmicProblems/CompetitiveProgramming/Chapter1/Exercises/1.3/: UVa11172.cpp  UVa11364.cpp  UVa11498.cpp  UVa11547.cpp  UVa12250.cpp  UVa12289.cpp  UVa12577.cpp  Uva00272.cpp  test
AlgorithmicProblems/CompetitiveProgramming/Chapter1/Exercises/1.3/Medium/: UVa00119.cpp  UVa00661.cpp  UVa10324.cpp  UVa10424.cpp  UVa10919.cpp  UVa11568.cpp  UVa11661.cpp  UVa11683.cpp  UVa11687.cpp  UVa12478.cpp  test
AlgorithmicProblems/CompetitiveProgramming/Chapter1/Exercises/1.3/easy/: UVa00621.cpp  UVa10114.cpp  UVa10300.cpp  UVa11332.cpp  UVa11559.cpp  UVa11679.cpp  UVa11769.cpp  UVa11799.cpp  UVa11942.cpp  UVa12015.cpp  UVa12157.cpp  UVa12468.cpp  test
AlgorithmicProblems/CompetitiveProgramming/Chapter1/Exercises/1.3/supereasy/: UVa01124.cpp  UVa10550.cpp  UVa11044.cpp  UVa11727.cpp  UVa12250.cpp  UVa12372.cpp  UVa12403.cpp
AlgorithmicProblems/CompetitiveProgramming/Chapter1/studentpairs/: booksolution.cpp  main  main.go
AlgorithmicProblems/CompetitiveProgramming/Chapter2/Exercises/2.2/: 2.2.1.1.cpp  2.2.1.2.cpp  2.2.1.4.cpp  2.2.1.5.cpp  2.2.2.1.cpp  2.2.2.2.cpp  2.2.2.3.cpp  2.2.2.4.cpp  2.2.2.5.cpp  2.2.2.6.cpp  test
AlgorithmicProblems/CompetitiveProgramming/Chapter2/Exercises/Arrays/: UVa00665.cpp
(+152 files in other folders)
