cmake_minimum_required(VERSION 3.25)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 17)

add_executable(CompetitiveProgramming Chapter1/studentpairs/booksolution.cpp Chapter1/Exercises/1.2/1.2.3.2.cpp Chapter1/Exercises/1.2/1.2.3.3.cpp Chapter1/Exercises/1.2/1.2.3.6.cpp Chapter1/Exercises/1.3/1.3.1.cpp Chapter1/Exercises/1.3/Uva00272.cpp Chapter1/Exercises/1.3/UVa01124.cpp Chapter1/Exercises/1.3/UVa10550.cpp Chapter1/Exercises/1.3/UVa11044.cpp Chapter1/Exercises/1.3/UVa11172.cpp Chapter1/Exercises/1.3/UVa11364.cpp Chapter1/Exercises/1.3/UVa11498.cpp Chapter1/Exercises/1.3/UVa11547.cpp Chapter1/Exercises/1.3/UVa11727.cpp)
